<resources>
    <string name="app_name">HomeEnvironment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="TipTextScreen_label">Tip Text Screen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="notification_channel_name">notification channel</string>
    <string name="notification_channel_description">notifications description</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Buttons -->
    <string name="tipsButton">Tips</string>
    <string name="measureButton">Measure Environment</string>

    <!-- Strings used for TextViews -->
    <string name="tempText">Temperature</string>
    <string name="LightLevelText"> Light Level</string>
    <string name="noiseText">Noise Level</string>
    <string name="humidityText">Humidity</string>
    <string name="pressureText">Pressure</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tempInfo">%1$.1f %2$s</string>
    <string name="lightLevelInfo">%1$d lx</string>
    <string name="noiseInfo">%1$.2f dB</string>
    <string name="humidityInfo">%1$d %%</string>
    <string name="pressureInfo">%1$d Pa</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="key_reminder" />
    <string name="notification" />
    <string name="temperature" />

    <string name="notification_Boolean">false</string>
    <string name="temperature_Boolean">false</string>

    <string name="tempTipText">The ideal room temperature in an office space is around 22C or 72F. If your room is warmer than this, consider opening a few windows or using a fan. If your room is colder you might want to consider moving closer to a heat source and not opening any windows for extended periods of time. If your temperature seems odd, it might be because your phone lacks a thermometer, in which case the temperature of your geographical location was used by the app.</string>
    <string name="pressureTipText">The ideal level of pressure in an area fit for office work is around 985 Pa. If your area consistently has lower pressure, you might want to consider moving to a lower altitude when you work.</string>
    <string name="lightTipText">The ideal light level for your working space should be around 320-500 lx. Is it much brighter, consider rolling down some blinds or going to a more shaded area. Is it darker, turn on some lights or ideally you can get some sunlight by opening up your blinds.</string>
    <string name="humidityTipText">Ideally the humidity in your area should be around 45% - 55%. If the humidity deviates from this, you should look into getting a humidifier that can regulate your humidity level. If your humidity seems odd, it might be because your phone lacks a hygrometer, in which case the humidity of your geographical location was used by the app.</string>
    <string name="noiseTipText">The ideal noise level in your workspace should never exceed 60 dB. If the noise level of your working environment is consistently higher than 60 dB, consider moving to a quieter workspace or ask the people around you to quiet down.</string>

    <string name="tempInfoText">Ideal temperature is 22C/72F</string>
    <string name="pressureInfoText">Ideal pressure is 985 Pa</string>
    <string name="lightInfoText">Ideal lux is 320-500 lx</string>
    <string name="humidityInfoText">Ideal humidity is 45% - 55%</string>
    <string name="noiseInfoText">Ideal noise level is less than 60 dB</string>

    </resources>
