<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.homeenvironment.MeasurementFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_measurement">

        <action
        android:id="@+id/action_FirstFragment_to_SecondFragment"
        app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_Noiselevel"
            app:destination="@id/soundMeter" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.homeenvironment.tips.TipFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_tips">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/TipTextScreen"
        android:name="com.example.homeenvironment.tips.TipTextScreen"
        android:label="@string/TipTextScreen_label"
        tools:layout="@layout/activity_tiptextscreen">

        <action
            android:id="@+id/action_SecondFragment_to_TipTextScreen"
            app:destination="@id/TipTextScreen" />
    </fragment>
    <activity
        android:id="@+id/soundMeter"
        android:name="com.example.homeenvironment.Sensors.NoiseLevel"
        android:label="acivity_main2"
        tools:layout="@layout/acivity_main2" />
         <action
            android:id="@+id/action_Noiselevel_to_FirstFragment"
            app:destination="@id/FirstFragment" />
</navigation>