<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    tools:layout_editor_absoluteX="-40dp"
    tools:layout_editor_absoluteY="-17dp">


    <!-- Temperature -->

    <!-- Pressure level -->

    <!-- Light level -->

    <!-- Humidity level -->

    <!-- Noise -->

    <!-- Buttons -->

    <!-- Information -->

    <Button
        android:id="@+id/tipsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/tipsButton"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noiseID" />

    <TextView
        android:id="@+id/noiseID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/value_shape"
        android:ems="8"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:text="@string/noiseInfo"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/noiseTextView" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:text="@string/tempText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noiseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/noiseText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/humidityID" />

    <TextView
        android:id="@+id/pressureID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:background="@drawable/value_shape"
        android:ems="8"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:text="0Pa"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

    <TextView
        android:id="@+id/temperatureID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/value_shape"
        android:ems="8"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:text="0*C"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <TextView
        android:id="@+id/lightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/LightLevelText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/pressureID" />

    <TextView
        android:id="@+id/humidityID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:background="@drawable/value_shape"
        android:ems="8"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:text="5g/m^3"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pressureText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/temperatureID" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/humidityText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/lightID" />

    <TextView
        android:id="@+id/lightID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/value_shape"
        android:ems="8"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:text="0lux"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/lightTextView" />

    <Button
        android:id="@+id/measureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/measureButton"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsButton" />

    <TextView
        android:id="@+id/noiseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_info_shape"
        android:gravity="center"
        android:text="?"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/noiseID"
        app:layout_constraintStart_toEndOf="@+id/noiseID" />

    <TextView
        android:id="@+id/tempInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_info_shape"
        android:gravity="center"
        android:text="?"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/temperatureID"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/humidityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_info_shape"
        android:gravity="center"
        android:text="?"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/humidityID"
        app:layout_constraintStart_toEndOf="@+id/humidityID" />

    <TextView
        android:id="@+id/pressureInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_info_shape"
        android:gravity="center"
        android:text="?"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/pressureID"
        app:layout_constraintStart_toEndOf="@+id/pressureID" />

    <TextView
        android:id="@+id/lightInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/circle_info_shape"
        android:gravity="center"
        android:text="?"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/lightID"
        app:layout_constraintStart_toEndOf="@+id/lightID" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19847329" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="79dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="133dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6615776"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3409669"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginEnd="127dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6768448"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="266dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.32315522"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


<!-- <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="533dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@id/button_noiselevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_noiselevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noiselevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first" />

</androidx.constraintlayout.widget.ConstraintLayout>
        app:layout_constraintTop_toBottomOf="@id/Lux_Measurement" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="296dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="486dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is for measuring temperature!"
        app:layout_constraintTop_toBottomOf="@id/Humidity_Text"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout> -->
